Fix T89981: missing refresh on the compositors render layer node when adding/removing AOVs

Just refresh the node's outputs via ntreeCompositUpdateRLayers().

Maniphest Tasks: T89981

Differential Revision: https://developer.blender.org/D11973